--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-02-25  6.8.3-6 Cristy  <quetzlzacatenango@image...>
+   * Support built-in 1x1 and 2x1 threshold maps (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=22861).
+
 2013-02-25  6.8.2-6 Glenn Randers-Pehrson <glennrp@image...>
   * Relocated png_set_bKGD(), etc., after png_set_IHDR() because they
     might depend on members of info_ptr that are set by png_set_IHDR().
